New Data Structure(Person,Restaurant,Tables)